--- a/index-dist.html
+++ b/index-dist.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <title>Assistente Jurídico IA - Dionattan Coutrin Figueiredo</title>
+    <title>Assistente Jurídico IA - Coutrin & Figueiredo Advogados</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
 </head>
