--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
         <h1>Assistente Jurídico IA</h1>
     </div>
 
+    <div id="config-section" class="config-section">
+        <h2>Configuração da API Key</h2>
+        <div class="ms-TextField">
+            <input type="password" id="apiKey" class="ms-TextField-field" placeholder="Insira sua chave API da OpenAI">
+        </div>
+        <button onclick="saveApiKey()" class="ms-Button ms-Button--primary">
+            <span class="ms-Button-label">Salvar Chave API</span>
+        </button>
+    </div>
+
     <div class="main-content">
         <div id="selected-text"></div>
         
