Adicionando botão 'Aplicar ao Texto' para controle manual da substituição

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
         <div id="response" class="ms-MessageBar">
             <h3>Resposta do Assistente</h3>
             <div id="response-content" class="ms-MessageBar-text"></div>
+            <div class="response-actions">
+                <button id="apply-text" class="ms-Button ms-Button--primary" style="display: none;">
+                    <span class="ms-Button-label">Aplicar ao Texto</span>
+                </button>
+            </div>
         </div>
     </div>
 
