Tornando obrigatório o uso da API de Assistentes da OpenAI

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             <input type="password" id="apiKey" class="ms-TextField-field" placeholder="Insira sua chave API da OpenAI">
         </div>
         <div class="ms-TextField">
+            <label class="ms-Label">ID do Assistente (obrigatório)</label>
+            <input type="text" id="assistantId" class="ms-TextField-field" placeholder="Insira o ID do assistente pré-configurado na OpenAI" required>
+        </div>
+        <div class="ms-TextField">
             <label class="ms-Label">Instruções do Assistente</label>
             <textarea id="assistantInstructions" class="ms-TextField-field" rows="4" placeholder="Digite as instruções específicas para o assistente..."></textarea>
         </div>
