melhoria no designer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body class="ms-Fabric">
     <div class="header">
-        <h1>Assistente Jurídico IA - JusTexto</h1>
+        <h1>JusTexto</h1>
         <div class="header-right">
             <div id="assistant-selector" class="assistant-selector">
                 <select id="current-assistant" class="ms-Dropdown">
