--- a/support.html
+++ b/support.html
@@ -3,78 +3,57 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Suporte - JusTexto</title>
+  <title>JusTexto - Suporte</title>
   <style>
     body {
       font-family: "Segoe UI", Arial, sans-serif;
       max-width: 800px;
       margin: 0 auto;
-      padding: 30px 20px;
+      padding: 20px;
       line-height: 1.6;
       color: #333;
     }
-    h1 {
+    h1, h2 {
       color: #1E3A8A;
-      border-bottom: 2px solid #3B82F6;
-      padding-bottom: 10px;
-      margin-bottom: 30px;
     }
     .contact-info {
-      background-color: #f5f8ff;
-      border-radius: 8px;
+      background-color: #f5f5f5;
       padding: 20px;
-      margin-bottom: 30px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    h2 {
-      color: #2563EB;
-      margin-top: 0;
+      border-radius: 5px;
+      margin: 20px 0;
     }
     a {
-      color: #2563EB;
+      color: #0078d4;
       text-decoration: none;
     }
     a:hover {
       text-decoration: underline;
     }
-    .footer {
-      margin-top: 40px;
-      font-size: 0.9em;
-      color: #666;
-      text-align: center;
-      border-top: 1px solid #eee;
-      padding-top: 20px;
-    }
   </style>
 </head>
 <body>
-  <h1>Suporte ao JusTexto</h1>
+  <h1>JusTexto - Suporte</h1>
   
+  <p>Bem-vindo à página de suporte do JusTexto, seu assistente jurídico alimentado por IA para ajudar na redação e análise de documentos jurídicos.</p>
+  
+  <h2>Contato</h2>
   <div class="contact-info">
-    <h2>Como podemos ajudar?</h2>
-    <p>Para obter suporte com o JusTexto - Assistente Jurídico IA, entre em contato conosco por:</p>
-    
-    <ul>
-      <li><strong>E-mail:</strong> <a href="mailto:contato@dionattan.adv.br">contato@dionattan.adv.br</a></li>
-      <li><strong>WhatsApp:</strong> <a href="https://wa.me/5562983404044">(62) 98340-4044</a></li>
-    </ul>
-    
-    <p>Nossa equipe de suporte está disponível nos dias úteis, das 9h às 18h.</p>
+    <p><strong>Email:</strong> <a href="mailto:contato@dionattan.adv.br">contato@dionattan.adv.br</a></p>
+    <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/dionattan-figueiredo/" target="_blank">Dionattan Coutrin Figueiredo</a></p>
   </div>
   
   <h2>Perguntas Frequentes</h2>
   
-  <h3>Como configurar o JusTexto?</h3>
-  <p>Para configurar o JusTexto, você precisa inserir sua chave API da OpenAI e adicionar pelo menos um assistente. Consulte nossa <a href="home.html">página inicial</a> para obter instruções detalhadas.</p>
+  <h3>Como posso começar a usar o JusTexto?</h3>
+  <p>Após instalar o add-in JusTexto, abra o Microsoft Word e clique no botão JusTexto na guia Início. Configure sua chave API da OpenAI e comece a usar o assistente para otimizar seus textos jurídicos.</p>
   
-  <h3>Como criar meu assistente personalizado?</h3>
-  <p>Você pode criar assistentes personalizados na plataforma OpenAI. Acesse <a href="https://platform.openai.com/assistants" target="_blank">https://platform.openai.com/assistants</a> e siga as instruções para criar um assistente com instruções específicas para suas necessidades.</p>
+  <h3>Quais funcionalidades o JusTexto oferece?</h3>
+  <p>O JusTexto permite reescrever, resumir, simplificar e criar contra-argumentos para seus textos jurídicos. Também é possível fazer perguntas específicas para o assistente através do chat integrado.</p>
   
-  <h3>O JusTexto funciona offline?</h3>
-  <p>Não, o JusTexto requer uma conexão com a internet para se comunicar com a API da OpenAI e processar o texto.</p>
+  <h3>Posso configurar o JusTexto para necessidades específicas?</h3>
+  <p>Sim, o JusTexto permite adicionar diferentes assistentes pré-configurados na OpenAI, possibilitando a customização para diferentes tipos de tarefas jurídicas.</p>
   
-  <div class="footer">
-    &copy; 2025 JusTexto - Dionattan Coutrin Figueiredo
-  </div>
+  <h2>Política de Privacidade</h2>
+  <p>O JusTexto não armazena nenhum texto ou documento enviado pelo usuário. Todas as interações com a API da OpenAI são realizadas utilizando sua própria chave API, garantindo que você mantenha controle total sobre seus dados.</p>
 </body>
 </html> 
